--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
     <head>
-        <meta http-equiv="refresh" content="0; url=https://tamswiki.org/">
+        <meta http-equiv="refresh" content="0; url=https://www.tamswiki.org/">
     </head>
 </html>
